// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuestSignUpForm matches snapshot 1`] = `
<fieldset
  class="form-fieldset"
>
  <legend
    class="form-legend optimizedCheckout-headingSecondary"
  >
    Create an account for a faster checkout in the future
  </legend>
  <div
    class="form-body"
  >
    <div>
      <form
        class="guest-signup form"
        novalidate=""
      >
        <div
          class="form-field"
        >
          <label
            class="form-label optimizedCheckout-form-label"
            for="password"
            id="password-label"
          >
            Password 
            <small>
              5-character minimum, case sensitive
            </small>
          </label>
          <input
            class="form-input optimizedCheckout-form-input"
            id="password"
            name="password"
            type="password"
            value=""
          />
        </div>
        <div
          class="form-field"
        >
          <label
            class="form-label optimizedCheckout-form-label"
            for="confirmPassword"
            id="confirmPassword-label"
          >
            Confirm Password
          </label>
          <input
            class="form-input optimizedCheckout-form-input"
            id="confirmPassword"
            name="confirmPassword"
            type="password"
            value=""
          />
        </div>
        <div
          class="form-actions"
        >
          <button
            class="button button--primary optimizedCheckout-buttonPrimary"
            id="createAccountButton"
            type="submit"
          >
            Create Account
          </button>
        </div>
      </form>
    </div>
  </div>
</fieldset>
`;

exports[`GuestSignUpForm matches snapshot when customer cannot be created 1`] = `
<fieldset
  class="form-fieldset"
>
  <legend
    class="form-legend optimizedCheckout-headingSecondary"
  >
    Setup a password for a faster checkout in the future
  </legend>
  <div
    class="form-body"
  >
    <p>
      An account has been created for you, but you'll need to setup a password to sign in.
    </p>
    <div>
      <form
        class="guest-signup form"
        novalidate=""
      >
        <div
          class="form-field"
        >
          <label
            class="form-label optimizedCheckout-form-label"
            for="password"
            id="password-label"
          >
            Password 
            <small>
              5-character minimum, case sensitive
            </small>
          </label>
          <input
            class="form-input optimizedCheckout-form-input"
            id="password"
            name="password"
            type="password"
            value=""
          />
        </div>
        <div
          class="form-field"
        >
          <label
            class="form-label optimizedCheckout-form-label"
            for="confirmPassword"
            id="confirmPassword-label"
          >
            Confirm Password
          </label>
          <input
            class="form-input optimizedCheckout-form-input"
            id="confirmPassword"
            name="confirmPassword"
            type="password"
            value=""
          />
        </div>
        <div
          class="form-actions"
        >
          <button
            class="button button--primary optimizedCheckout-buttonPrimary"
            id="createAccountButton"
            type="submit"
          >
            Save Password
          </button>
        </div>
      </form>
    </div>
  </div>
</fieldset>
`;
